Long steps to make Metaheuristics work. Almost fully OK.